# system-programming-m1

lab1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
lab2/: 1_signal.cpp  2_message_queue.cpp  2_unnamed_pipe.cpp  CMakeLists.txt  check.hpp  study.cpp
lab3/: 1_generate_matrix.cpp  1_mul_matrix.cpp  2_create_file.cpp  2_find_element.cpp  3_mt_queue.cpp  CMakeLists.txt
lab4/: CMakeLists.txt  client.cpp  server.cpp
lab5/: CMakeLists.txt  check.hpp  common.hpp  main.cpp  study.cpp
