cmake_minimum_required(VERSION 3.20)
project(lab3)

set(CMAKE_CXX_STANDARD 17)
find_package(Threads REQUIRED)
link_libraries(Threads::Threads)
#include_directories(include)
add_executable(1_mul_matrix "1_mul_matrix.cpp")
add_executable(1_generate_matrix "1_generate_matrix.cpp")
add_executable(2_create_file "2_create_file.cpp")
add_executable(2_find_element "2_find_element.cpp")
add_executable(3_mt_queue "3_mt_queue.cpp")
#add_executable(2_unnamed_pipe "2_unnamed_pipe.cpp")
#add_executable(2_message_queue "2_message_queue.cpp")
#add_executable(study "study.cpp")
